<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="kk.cheung.rereminder.ActivityCreateTask"
    android:id="@+id/scroller"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"

        android:id="@+id/editTaskActivity"
        >


    <!--Task Name -->

        <TextView android:id="@+id/TaskNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:padding="@dimen/bigSubviewMargin"

            android:textColor="@color/black"
            android:textSize="@dimen/createTaskLabelTextSize"
            android:text="@string/TaskNameLabel"
             />

        <EditText android:id="@+id/TaskNameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/bigSubviewMargin"
            android:layout_below="@+id/TaskNameLabel"
            android:layout_alignParentStart="true"

            android:hint="@string/TaskNameHint"
            />




    <!--Repeat Time-->


        <TextView android:id="@+id/TaskRepeatLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/bigSubviewMargin"

            android:textColor="@color/black"
            android:textSize="@dimen/createTaskLabelTextSize"
            android:text="@string/TaskRepeatLabel"
            android:layout_below="@+id/TaskNameField"
            android:layout_alignParentStart="true"
            android:layout_marginTop="@dimen/TaskFieldMargin"
            />

        <TextView android:id="@+id/TaskRepeatHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/TaskRepeatLabel"
            android:layout_alignParentStart="true"
            android:padding="@dimen/bigSubviewMargin"

            android:textColor="@color/lightText"
            android:textSize="@dimen/createTaskHintTextSize"
            android:text="@string/TaskRepeatHint" />

        <LinearLayout android:id="@+id/ymdFields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/TaskRepeatHint"
            android:paddingStart="@dimen/bigSubviewMargin"
            android:paddingEnd="@dimen/bigSubviewMargin"
            android:orientation="horizontal">

            <EditText android:id="@+id/yearField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:inputType="number"
                />

            <TextView android:id="@+id/yearText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/yearFieldText"
                android:textColor="@color/lightText"
                android:textSize="@dimen/createTaskHintTextSize"
                android:labelFor="@id/yearField"
                />

            <EditText android:id="@+id/monthField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:inputType="number"
                />

            <TextView android:id="@+id/monthText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/monthFieldText"
                android:textColor="@color/lightText"
                android:textSize="@dimen/createTaskHintTextSize"
                android:labelFor="@id/monthField"
                />

            <EditText android:id="@+id/dayField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"

                android:inputType="number"
                />

            <TextView android:id="@+id/dayText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/dayFieldText"
                android:textColor="@color/lightText"
                android:textSize="@dimen/createTaskHintTextSize"
                android:labelFor="@id/dayField"
                />

        </LinearLayout>

        <LinearLayout android:id="@+id/hrminFields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ymdFields"
            android:paddingStart="@dimen/bigSubviewMargin"
            android:paddingEnd="@dimen/bigSubviewMargin"
            android:orientation="horizontal">

            <EditText android:id="@+id/hourField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:inputType="number"
                />

            <TextView android:id="@+id/hourText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/hourFieldText"
                android:textColor="@color/lightText"
                android:textSize="@dimen/createTaskHintTextSize"
                android:labelFor="@id/hourField"
                />

            <EditText android:id="@+id/minField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:inputType="number"
                />

            <TextView android:id="@+id/minText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/minFieldText"
                android:textColor="@color/lightText"
                android:textSize="@dimen/createTaskHintTextSize"
                android:labelFor="@id/minField"
                />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                />
        </LinearLayout>



    <!--Set Time-->


        <TextView android:id="@+id/TaskSetTimeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/hrminFields"
            android:layout_alignParentStart="true"
            android:layout_marginTop="@dimen/TaskFieldMargin"
            android:padding="@dimen/bigSubviewMargin"

            android:textColor="@color/black"
            android:textSize="@dimen/createTaskLabelTextSize"
            android:text="@string/TaskSetTimeLabel"
            />

        <TextView android:id="@+id/TaskSetTimeHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/TaskSetTimeLabel"
            android:layout_alignStart="@id/TaskSetTimeLabel"
            android:padding="@dimen/bigSubviewMargin"

            android:textColor="@color/lightText"
            android:textSize="@dimen/createTaskHintTextSize"
            android:text="@string/TaskSetTimeHint" />

        <LinearLayout android:id="@+id/TaskSetTimeButtLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/TaskSetTimeHint"
            style="?android:attr/buttonBarButtonStyle"
            android:background="@color/transparent"

            >

            <Button android:id="@+id/setSetDateButt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/bigSubviewMargin"

                style="?android:attr/buttonBarButtonStyle"
                android:textSize="@dimen/createTaskHintTextSize"
                android:textColor="@color/primaryDark"
                android:onClick="showSetDatePickerDialog"
                />

            <View android:id="@+id/setTimeDivider"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/black"
                />

            <Button android:id="@+id/setSetTimeButt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/bigSubviewMargin"

                style="?android:attr/buttonBarButtonStyle"
                android:textSize="@dimen/createTaskHintTextSize"
                android:textColor="@color/primaryDark"
                android:onClick="showSetTimePickerDialog"
                />
        </LinearLayout>



    <!--Color-->


        <TextView android:id="@+id/TaskColorLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/TaskSetTimeButtLine"
            android:layout_alignParentStart="true"
            android:layout_marginTop="@dimen/TaskFieldMargin"
            android:padding="@dimen/bigSubviewMargin"

            android:textColor="@color/black"
            android:textSize="@dimen/createTaskLabelTextSize"
            android:text="@string/TaskColorLabel"
            />

        <Spinner android:id="@+id/TaskColorSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/TaskColorLabel"
            android:layout_alignParentStart="true"
            android:padding="@dimen/smallSubviewMargin"
            >

        </Spinner>




    <!--Create  task button-->

        <Button android:id="@+id/TaskCreateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"

            android:onClick="createTask"
            android:text="@string/TaskCreateButt"
            android:background="@drawable/create_task_butt"
            android:elevation="10dp"
            />



    </RelativeLayout>
</ScrollView>